--- a/index.html
+++ b/index.html
@@ -28,37 +28,83 @@
 		</div>
 
 		<div class="projects-container">
-			<div class="thumb" id="04">
-				<span><img src="img/suicidal.jpg"></span>
+			<div class="thumb" id="no4">
 				<div id="expand">
 					<h2>04</h2>
+					<div id="tag">(infomation visualisation)</div>
+					<div id="project-description">
+						<p>A collaborative project visualising</p>
+						<p>data of suicidal rate in one year in</p>
+						<p>Thailand. Each impaired resin face</p>
+						<p>on the map of Thailand represent</p>
+						<p>the face of the deads of 5 main</p>
+						<p>suicide methods and where the</p>
+						<p>incidents locatedthroughout</p>
+						<p>the country.</p>
+					</div>
+					<div id="project-name"><h3>Suicial Map</h3></div>
 					<div id="date">July 13 – 2017</div>
-					<h3>Project Name</h3>
 				</div>
+				<span><img id="item4" src="img/suicidal.jpg"></span>
 			</div>
-			<div class="thumb" id="03">
-				<span><img src="img/asromsilp.jpg"></span>
+
+			<div class="thumb" id="no3">
 				<div id="expand">
 					<h2>03</h2>
-					<div id="date">July 13 – 2017</div>
-					<h3>Project Name</h3>
-				</div>
-			</div>
-			<div class="thumb" id="02">
-				<span><img src="img/wayfinding.jpg"></span>
-					<div id="expand">
-					<h2>02</h2>
-					<div id="date">July 13 – 2017</div>
-					<h3>Project Name</h3>
-				</div>
-			</div>
-			<div class="thumb" id="01">
-				<span><img src="img/roy.jpg"></span>
-					<div id="expand">
-					<h2>01</h2>
-					<div id="date">July 13 – 2017</div>
-					<h3>Project Name</h3>
+					<div id="tag">(user interface)</div>
+					<div id="project-description">
+						<p>A collaborative project visualising</p>
+						<p>data of suicidal rate in one year in</p>
+						<p>Thailand. Each impaired resin face</p>
+						<p>on the map of Thailand represent</p>
+						<p>the face of the deads of 5 main</p>
+						<p>suicide methods and where the</p>
+						<p>incidents locatedthroughout</p>
+						<p>the country.</p>
 					</div>
+					<div id="project-name"><h3>Asrom Silp</h3></div>
+					<div id="date">July 13 – 2017</div>
+				</div>
+				<span><img id="item3" src="img/asromsilp.jpg"></span>
+			</div>
+
+			<div class="thumb" id="no2">
+				<div id="expand">
+					<h2>02</h2>
+					<div id="tag">(user experience)</div>
+					<div id="project-description">
+						<p>A collaborative project to redesign</p>
+						<p>a wayfinding system and signage for</p>
+						<p>five storeys buildings, Lert Urasayanan</p>
+						<p>and Vothayakorn buildings. Aiming to</p>
+						<p>comfortably lead and guild newcomers</p>
+						<p>to feel confident in the direction</p>
+						<p>they are heading.</p>
+					</div>
+					<div id="project-name"><h3>Grow</h3></div>
+					<div id="date">July 13 – 2017</div>
+				</div>
+				<span><img id="item2" src="img/wayfinding.jpg"></span>
+			</div>
+
+			<div class="thumb" id="no1">
+				<div id="expand">
+					<h2>01</h2>
+					<div id="tag">(graphic)</div>
+					<div id="project-description">
+						<p>A collaborative project visualising</p>
+						<p>data of suicidal rate in one year in</p>
+						<p>Thailand. Each impaired resin face</p>
+						<p>on the map of Thailand represent</p>
+						<p>the face of the deads of 5 main</p>
+						<p>suicide methods and where the</p>
+						<p>incidents locatedthroughout</p>
+						<p>the country.</p>
+					</div>
+					<div id="project-name"><h3>Hey Roy</h3></div>
+					<div id="date">July 13 – 2017</div>
+				</div>
+				<span><img id="item1" src="img/roy.jpg"></span>
 			</div>
 		</div>
 
