--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
 	<title>chavisa</title>
 </head>
 <body>
+
+	<div class="scrollbar" id="style-1">
+		<div class="force-overflow"></div>
+	</div> 
+
 	<div id="wrap">
 
 		<div class="header">
@@ -109,5 +114,6 @@
 		</div>
 
 	</div>
+
 </body>
 </html>
