edit project information
edit projects descriptions

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 						<p>incidents locatedthroughout</p>
 						<p>the country.</p>
 					</div>
-					<div id="project-name"><h3>Suicial Map</h3></div>
+					<div id="project-name"><h3>Suicidal Map</h3></div>
 					<div id="date">July 13 – 2017</div>
 				</div>
 				<span><img id="item4" src="img/suicidal.jpg"></span>
@@ -58,14 +58,12 @@
 					<h2>03</h2>
 					<div id="tag">(user interface)</div>
 					<div id="project-description">
-						<p>A collaborative project visualising</p>
-						<p>data of suicidal rate in one year in</p>
-						<p>Thailand. Each impaired resin face</p>
-						<p>on the map of Thailand represent</p>
-						<p>the face of the deads of 5 main</p>
-						<p>suicide methods and where the</p>
-						<p>incidents locatedthroughout</p>
-						<p>the country.</p>
+						<p>Responsive Web, User Interfaces and</p>
+						<p>Experiences Design for The School</p>
+						<p>of Architecture Professional Program,</p>
+						<p>Asrom Silp Institue of the Arts,</p>
+						<p>Thailand. Done while working at</p>
+						<p>Symbolist Co., Ltd.</p>
 					</div>
 					<div id="project-name"><h3>Asrom Silp</h3></div>
 					<div id="date">July 13 – 2017</div>
@@ -81,10 +79,10 @@
 						<p>A collaborative project to redesign</p>
 						<p>a wayfinding system and signage for</p>
 						<p>five storeys buildings, Lert Urasayanan</p>
-						<p>and Vothayakorn buildings. Aiming to</p>
-						<p>comfortably lead and guild newcomers</p>
-						<p>to feel confident in the direction</p>
-						<p>they are heading.</p>
+						<p>and Vothayakorn buildings. Aiming </p>
+						<p>to comfortably lead and guild </p>
+						<p>newcomers to feel confident in the</p>
+						<p>direction they are heading.</p>
 					</div>
 					<div id="project-name"><h3>Grow</h3></div>
 					<div id="date">July 13 – 2017</div>
@@ -97,14 +95,14 @@
 					<h2>01</h2>
 					<div id="tag">(graphic)</div>
 					<div id="project-description">
-						<p>A collaborative project visualising</p>
-						<p>data of suicidal rate in one year in</p>
-						<p>Thailand. Each impaired resin face</p>
-						<p>on the map of Thailand represent</p>
-						<p>the face of the deads of 5 main</p>
-						<p>suicide methods and where the</p>
-						<p>incidents locatedthroughout</p>
-						<p>the country.</p>
+						<p>Roy Lichenstein is an American</p>
+						<p>pop artist. His work defined the </p>
+						<p>basicpremise of pop art through </p>
+						<p>parody. Favoring the comic strip</p>
+						<p>as his main inspiration. This set</p>
+						<p>of postcards are designed in the</p>
+						<p>remembrance of his unique style</p>
+						<p> of works.</p>
 					</div>
 					<div id="project-name"><h3>Hey Roy</h3></div>
 					<div id="date">July 13 – 2017</div>
